--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +9,10 @@
 </head>
 <body>
 <h1>Our Menu</h1>
-
 <div class="row">
   <div class="col-lg-4 col-md-6 col-sm-12"><div class="grid-item grid-item-chicken"><h2>Chicken</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec dui non felis viverra placerat. Fusce convallis sapien varius, condimentum risus vel, porta lacus. Nulla non sem imperdiet, feugiat nisi sed, posuere dui. Proin at odio odio. Ut consectetur rutrum lectus sit amet posuere. Vestibulum sit amet est nec ipsum pharetra luctus ut id risus. Maecenas scelerisque vulputate nibh, ut vestibulum</p></div></div>
   <div class="col-lg-4 col-md-6 col-sm-12"><div class="grid-item grid-item-beef"><h2>Beef</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec dui non felis viverra placerat. Fusce convallis sapien varius, condimentum risus vel, porta lacus. Nulla non sem imperdiet, feugiat nisi sed, posuere dui. Proin at odio odio. Ut consectetur rutrum lectus sit amet posuere. Vestibulum sit amet est nec ipsum pharetra luctus ut id risus. Maecenas scelerisque vulputate nibh, ut vestibulum</p></div></div>
   <div class="col-lg-4 col-md-12 col-sm-12"><div class="grid-item grid-item-sushi"><h2>Sushi</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec dui non felis viverra placerat. Fusce convallis sapien varius, condimentum risus vel, porta lacus. Nulla non sem imperdiet, feugiat nisi sed, posuere dui. Proin at odio odio. Ut consectetur rutrum lectus sit amet posuere. Vestibulum sit amet est nec ipsum pharetra luctus ut id risus. Maecenas scelerisque vulputate nibh, ut vestibulum</p></div></div>
 </div>
-
 </body>
 </html>
