Module 3 Coding Assignment Files

--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -46,7 +46,7 @@
   <h1 class="text-center">Our Menu</h1>
  <div class="container menu-page-container">
    <div class="row">
-     <div class="col-xs-12">
+     <section class="col-xs-12">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium, sapien nec convallis malesuada, felis massa facilisis libero, a dictum nulla nunc quis felis. Etiam et ante non dui pellentesque faucibus. Nunc eu facilisis leo. Cras nec lorem aliquam magna vehicula rutrum. Praesent laoreet congue nisi at sagittis. Donec posuere libero dui, ut placerat neque blandit vitae. Fusce sed est sed dui lacinia rhoncus et vitae purus.
           </p><p>
           Nunc non facilisis dolor, sed dapibus metus. Mauris nisi urna, bibendum eu porttitor non, consectetur sed justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce mollis varius augue et egestas. Ut a ullamcorper dui. Proin hendrerit nunc sed metus feugiat tempor. Ut gravida eros et tortor tempus, in iaculis ligula efficitur. Duis vel posuere massa. Suspendisse potenti. Fusce eros augue, fermentum vel quam pellentesque, blandit sagittis magna. Suspendisse mollis in justo vitae facilisis.
@@ -71,7 +71,7 @@
           </p><p>
           Vivamus cursus iaculis libero, in convallis arcu. Donec volutpat neque eu congue posuere. Praesent posuere arcu justo, id elementum nisl ultrices eget. Aliquam erat volutpat. Aliquam vestibulum arcu at nibh consequat, vel venenatis risus mattis. Nulla suscipit neque dolor. Cras id risus nisl. In justo felis, porttitor in lectus vel, lobortis ultricies mauris. Aliquam erat volutpat. Vestibulum ornare luctus felis, non sollicitudin lectus consectetur non. Nullam in augue nisl. Sed eleifend turpis hendrerit quam posuere, vel faucibus elit pharetra. Sed sem tellus, sagittis sit amet leo vestibulum, consectetur rhoncus massa. Sed aliquet pharetra vulputate. Nullam at luctus massa. Quisque dapibus orci ex, sed convallis arcu faucibus sagittis. 
           </p>  
-      </div>
+        </section>
     </div>
   </div> <!-- end of main container -->
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
