Module 3 Coding Assignment Files

--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -71,7 +71,7 @@
           </p><p>
           Vivamus cursus iaculis libero, in convallis arcu. Donec volutpat neque eu congue posuere. Praesent posuere arcu justo, id elementum nisl ultrices eget. Aliquam erat volutpat. Aliquam vestibulum arcu at nibh consequat, vel venenatis risus mattis. Nulla suscipit neque dolor. Cras id risus nisl. In justo felis, porttitor in lectus vel, lobortis ultricies mauris. Aliquam erat volutpat. Vestibulum ornare luctus felis, non sollicitudin lectus consectetur non. Nullam in augue nisl. Sed eleifend turpis hendrerit quam posuere, vel faucibus elit pharetra. Sed sem tellus, sagittis sit amet leo vestibulum, consectetur rhoncus massa. Sed aliquet pharetra vulputate. Nullam at luctus massa. Quisque dapibus orci ex, sed convallis arcu faucibus sagittis. 
           </p>  
-        </section>
+        </section> <!-- end of main content section -->
     </div>
   </div> <!-- end of main container -->
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
