--- a/mod4_solution/index.html
+++ b/mod4_solution/index.html
@@ -8,6 +8,7 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Module 4 Solution Starter</h1>
+  <h1>Module 4 Solution </h1>
+  <p>Please check your browser's console!</p>
 </body>
 </html>
